# OpenMP

./: .gitignore  README.md
MPI/01_macos_mpi_test/: CMakeLists.txt  app  main.cpp
MPI/02_点对点_阻塞型_Send_Recv/: 02_MPI_Send_Recv.cpp
MPI/03_点对点_阻塞型_tag/: 03_MPI_tag.cpp
MPI/04_点对点_阻塞型_ Jacobi/: 04_ Jacobi.cpp  app
MPI/05_点对点_阻塞型_字符串传递/: mpi_send_recv_string.cpp
MPI/10_点对点_非阻塞型_Isend_Irecv/: 10_Isend_Irecv.cpp
MPI/15_点对点_非阻塞型_Iprobe/: mpi_iprobe.cpp
MPI/20_点对点_非阻塞_Jacobi迭代/: Jacobi_Isend_Irecv.cpp  app
MPI/30_点对点_重复非阻塞通信_Demo/: send_recv_init_start.cpp
MPI/50_组通信_广播_Boardcast/: app  mpi_boardcast.cpp
MPI/50_组通信_广播_Broadcast/: mpi_broadcast.cpp
MPI/50_组通信_广播字符串/: boardcast_arr_char.cpp
MPI/51_组通信_散播_Scatter/: mpi_scatter.cpp
MPI/52_组通讯_收集_Gather/: app  mpi_gather.cpp
MPI/53_组通讯_规约_Reduce/: app  mpi_reduce.cpp
MPI/54_组通讯_规约并散发_redece_scatter/: mpi_reduce_scatter.cpp
MPI/90_SPbSTU_lab9_encrypt/: lab9_Mengjianing.cpp
MPI/91_SPbSTU_lab10_11_Gather/: lab10_11_MengJianing.cpp
MPI/92_SPbSTU_lab12_Matrix/: lab12_MengJianing.cpp  source_matrix.txt  source_vector.txt
OpenMP/: .gitignore
OpenMP/01_macos_omptest/: command_run.txt  omptest  omptest.c
OpenMP/020_clause_private/: CMakeLists.txt  main.cpp
OpenMP/021_clause_reduction/: CMakeLists.txt  main.cpp
OpenMP/022_clause_nowait/: CMakeLists.txt  main.cpp
OpenMP/02_CLion_Test/: CMakeLists.txt  main.cpp
OpenMP/03_Calculus/: CMakeLists.txt  main.cpp
OpenMP/04_directive_for/: CMakeLists.txt  main.cpp
OpenMP/08_directive_sections/: CMakeLists.txt  main.cpp
OpenMP/50_OpenMP_lab6_string/: CMakeLists.txt  lab6.cpp  main  main.cpp
OpenMP/51_OpenMP_lab7_itc_demo/: CMakeLists.txt  main.cpp
OpenMP/52_OpenMP_lab7_itc/: CMakeLists.txt  lab7_1_MengJianing.cpp  main.cpp
OpenMP/53_OpenMP_lab7_2_matrix/: 53_OpenMP_lab7_2_matrix_inversion.cpp  CMakeLists.txt  lab7_2_matrix_inversion.cpp
